Revision history for {{$dist->name}}

{{$NEXT}}
          - make one of the code paths more efficient
          - add more diagnostic messages
          - add missing version to prereq specification
          - extract the proper package name from a module when there are
            statements in the 'main' namespace

0.001     2014-08-29 03:43:33Z
          - Initial release.